# velosim-mtl

./: AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
data/: montreal_bike_edges.gpkg  montreal_bike_network.graphml  montreal_bike_nodes.gpkg  sim_results.parquet  temporal_results.parquet
scripts/: fetch_data.py  generate_report.py  run_population_sim.py  run_prototype.py  run_spatial_prototype.py  run_temporal_sim.py  visualize_heatmap.py  visualize_map.py  visualize_results.py  visualize_temporal.py
src/velosim/: engine.py  models.py  population.py  router.py  terminal_viz.py
src/velosim_mtl/: __init__.py
